# lode

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  test_output.txt
.github/workflows/: docker-build.yml  tests.yml
docs/: astro.config.mjs
lode/: api.py  builder.py  cli.py  exceptions.py  pyvenv.cfg  security.py  warnings.json
lode/Scripts/: activate  activate.bat
lode/models/: __init__.py  atom.py  cardinality.py  concept.py  datatype.py  datatypeRestriction.py  individual.py  model.py  old_models.py  oneOf.py  property.py  propertyConceptRestriction.py  propertySelfRestriction.py  quantifier.py  relation.py  resource.py  restriction.py  rule.py  statement.py  truthFunction.py  value.py  variable.py
lode/reader/: README.md  __init__.py  config_manager.py  loader.py  modules.py  reader.py  security.py
lode/static/: style.css
lode/templates/: _entity_card.html  _toc_sidebar.html  error.html  index.html  owl_viewer.html  skos_viewer.html  viewer.html
lode/viewer/: __init__.py  base_viewer.py  owl_viewer.py  (+2 more)
reader/: README.md  _mapper.py  factory.py  models.py  orchestrator.py  strategy.py
scripts/: api.py
tests/: cache_printer.py  conftest.py  fresnel.json  imported.py  modules_report.json  modules_test.py  ontologies.json  ontologies_short.json  ontologies_spar.json  punning.py  punning_report.json  test_api.py  test_example.py  test_models.py  test_output.txt  test_owl_integrity.py  test_owl_logic.py  test_owl_viewer.py  test_reader.py  test_security.py  tests.md
(+99 files in other folders)
