[project]
name = "lode"
version = "0.1.0"
description = "New reengineered version of LODE, maintained by OpenCitations"
authors = [{name = "Valentina Pasqual, Silvio Peroni", email = "valentina.pasqual2@unibo.it"}]
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "rdflib>=7.4.0",
    "jinja2>=3.1.2", 
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/opencitations/lode"
Repository = "https://github.com/opencitations/lode"

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.3",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lode"]